--- a/i3-dotfiles/i3/i3blocks.conf
+++ b/i3-dotfiles/i3/i3blocks.conf
@@ -16,7 +16,6 @@
 # Please see man i3blocks for a complete reference!
 # The man page is also hosted at http://vivien.github.io/i3blocks
 
-
 # List of valid properties:
 #
 # align
@@ -40,125 +39,50 @@
 separator=false
 markup=pango
 
-<<<<<<< HEAD
-#[Weather]
-#command=~/.config/i3/scripts/openweather
-# or:
-#command=~/.config/i3/scripts/openweather-city
-#interval=1800
-#color=#7275b3
-=======
-# [Weather]
-# # command=~/.config/i3/scripts/openweather
-# # or:
-# command=~/.config/i3/scripts/openweather-city
-# interval=1800
-# color=#7275b3
->>>>>>> e939c12 (new dotfiles)
-
-[terminal]
-full_text= 
-color=#807dfe
-command=i3-msg -q exec xfce4-terminal
-<<<<<<< HEAD
-=======
-# min_width=25  # Adjust this value to match the width of the icon (e.g., 25 for your icon)
-
->>>>>>> e939c12 (new dotfiles)
-
-[browser]
-full_text= 
-color=#ff7f81
-command=i3-msg -q exec firefox
-
-[files]
-full_text= 
-color=#7f3fbf
-command=i3-msg -q exec thunar ~/
-
-<<<<<<< HEAD
-#[mail]
-#full_text= 
-#color=#dbcb75
-#command=i3-msg -q exec thunderbird
-=======
-[mail]
-full_text= 
-color=#dbcb75
-command=i3-msg -q exec thunderbird
->>>>>>> e939c12 (new dotfiles)
-
-[simple-2]
-full_text=: :
-color=#717171
-
 # Disk usage
 #
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-<<<<<<< HEAD
-label=
-=======
-label=  
->>>>>>> e939c12 (new dotfiles)
+label= 
 instance=/
 command=~/.config/i3/scripts/disk
 interval=30
 
-<<<<<<< HEAD
-=======
-
->>>>>>> e939c12 (new dotfiles)
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-<<<<<<< HEAD
-label=
-=======
-label=   
->>>>>>> e939c12 (new dotfiles)
+label= 
 command=~/.config/i3/scripts/memory
 interval=2
 
+
 [cpu_usage]
-<<<<<<< HEAD
-label=
-=======
-label=  
->>>>>>> e939c12 (new dotfiles)
+label= 
 command=~/.config/i3/scripts/cpu_usage
 #min_width=CPU: 100.00%
 interval=2
+
 
 [CPU-temperature]
 label=
 command=~/.config/i3/scripts/temperature
 interval=30
-#T_WARN=70
-#T_CRIT=90
+T_WARN=70
+T_CRIT=90
 #SENSOR_CHIP=""
 # where SENSOR_CHIP can be find with sensors output
 # can be used also for GPU temperature or other temperature sensors lm-sensors detects.
 
-# showing name of connected network (enable for wifi use)
-<<<<<<< HEAD
-#[net]
-#label=
-#command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
-#interval=30
-=======
-# [net]
-# label=
-# command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
-# interval=30
->>>>>>> e939c12 (new dotfiles)
 
-[bandwidth]
-command=~/.config/i3/scripts/bandwidth2
-interval=persist
+# showing name of connected network (enable for wifi use)
+[net]
+label= 
+command=echo "$(LANG=C nmcli d | grep connected | awk '{print $4}' | head -n 1)"
+interval=30
+
 
 # Battery indicator
 [battery]
@@ -168,41 +92,12 @@ command=~/.config/i3/scripts/battery2
 label=
 interval=30
 
-[simple-2]
-full_text=: :
-color=#717171
-
-[pavucontrol]
-full_text=
-command=pavucontrol
-
 [volume-pulseaudio]
+label= 
 command=~/.config/i3/scripts/volume
 instance=Master
 interval=1
 
-# display keyboard layout name
-# for keyboard layouts switcher
-# see i3 config file
-# this needs xkblayout-state installed from the AUR:
-# https://aur.archlinux.org/packages/xkblayout-state-git
-<<<<<<< HEAD
-#[keyboard-layout]
-#command=~/.config/i3/scripts/keyboard-layout
-#interval=2
-=======
-[keyboard-layout]
-command=~/.config/i3/scripts/keyboard-layout
-interval=2
->>>>>>> e939c12 (new dotfiles)
-
-[keybindings]
-full_text=
-command=~/.config/i3/scripts/keyhint
-
-# power-profiles-daemon implementation:
-# needs package power-profiles-daemon installed and the service running see here:
-# https://wiki.archlinux.org/title/CPU_frequency_scaling#power-profiles-daemon
 
 #set power-profile
 [ppd_menu]
@@ -215,12 +110,9 @@ color=#407437
 command=~/.config/i3/scripts/ppd-status
 interval=5
 
+
 [time]
-<<<<<<< HEAD
-#label=
-=======
-label=  
->>>>>>> e939c12 (new dotfiles)
+label= 
 command=date '+%a %d %b %H:%M:%S'
 interval=1
 
@@ -229,5 +121,5 @@ full_text=
 command=~/.config/i3/scripts/powermenu
 
 [simple-2]
-full_text=: :
+full_text=:
 color=#717171
